--- a/.env
+++ b/.env
@@ -1,4 +1,5 @@
-GOOGLE_ID=""
-GOOGLE_SECRET=""
+GOOGLE_ID="71433268978-vtcrqgvgg7sk7r87vt1k84rjiu291qd3.apps.googleusercontent.com"
+GOOGLE_SECRET="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"
 
-NEXT_AUTH_URL=""
+NEXTAUTH_URL=https://localhost:3000
+NEXTAUTH_SECRET=password_nextauth
