add the signin Page

--- a/.env
+++ b/.env
@@ -3,3 +3,6 @@ GOOGLE_SECRET="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"
 
 NEXTAUTH_URL=https://localhost:3000
 NEXTAUTH_SECRET=password_nextauth
+
+
+DATABASE_URL="postgresql://postgres:mysecretpassword@localhost:5433/travelImage"
