--- a/.env
+++ b/.env
@@ -1,8 +1,8 @@
-GOOGLE_ID="71433268978-vtcrqgvgg7sk7r87vt1k84rjiu291qd3.apps.googleusercontent.com"
-GOOGLE_SECRET="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"
+GOOGLE_ID=""
+GOOGLE_SECRET=""
 
-NEXTAUTH_URL=https://localhost:3000
-NEXTAUTH_SECRET=password_nextauth
+NEXTAUTH_URL=
+NEXTAUTH_SECRET=
 
 
-DATABASE_URL="postgresql://postgres:mysecretpassword@localhost:5433/travelImage"
+DATABASE_URL=""
