add the Docker Container

--- a/.env
+++ b/.env
@@ -5,4 +5,4 @@ NEXTAUTH_URL=https://localhost:3000
 NEXTAUTH_SECRET=password_nextauth
 
 
-DATABASE_URL="postgresql://postgres:mysecretpassword@localhost:5433/travelImage"
+DATABASE_URL="postgresql://Images_owner:AEO5asfQn3vI@ep-orange-forest-a12v50ke.ap-southeast-1.aws.neon.tech/Images?sslmode=require"
