--- a/package.json
+++ b/package.json
@@ -2,6 +2,9 @@
   "name": "image-gallery",
   "version": "0.1.0",
   "private": true,
+  "prisma": {
+    "seed": "ts-node prisma/seed.mjs"
+  },
   "scripts": {
     "dev": "next dev --experimental-https",
     "build": "next build",
@@ -16,6 +19,8 @@
     "@radix-ui/react-tabs": "^1.1.0",
     "@radix-ui/react-toast": "^1.2.1",
     "@types/bcrypt": "^5.0.2",
+    "@types/memory-cache": "^0.2.5",
+    "@types/next": "^9.0.0",
     "@types/next-auth": "^3.15.0",
     "axios": "^1.7.2",
     "bcrypt": "^5.1.1",
@@ -24,7 +29,9 @@
     "crypto-js": "^4.2.0",
     "generate-avatar": "^1.4.10",
     "googleapis": "^140.0.1",
+    "googlephotos": "^0.3.5",
     "lucide-react": "^0.414.0",
+    "memory-cache": "^0.2.0",
     "next": "14.2.5",
     "next-auth": "^4.24.7",
     "next-themes": "^0.3.0",
@@ -36,7 +43,7 @@
   },
   "devDependencies": {
     "@types/crypto-js": "^4.2.2",
-    "@types/node": "^20",
+    "@types/node": "^20.14.13",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "eslint": "^8",
